# finetuning-timesfm-databricks

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
SPECS/: SPEC.md  SPEC_PREZ.md
conf/: default.yaml
notebooks/: 00_setup.py  01_ingest_inverter_data.py  02_eda_and_split.py  03_finetune_lora.py  04_evaluate.py  05_register_and_serve.py
src/: data.py  metrics.py  model.py
tests/: test_data.py  test_metrics.py  test_model.py
