[project]
name = "finetuning-timesfm-databricks"
version = "0.1.0"
description = "Fine-tune TimesFM 2.5 with LoRA on Databricks."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "numpy",
    "pandas",
    "torch",
    "mlflow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
